--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,27 @@
           <version>3.3.0</version>
       </dependency>
 
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-jexl</artifactId>
+      <version>2.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.codehaus.groovy</groupId>
+      <artifactId>groovy</artifactId>
+      <version>1.8.0</version>
+    </dependency>
+<!--    <dependency>
+      <groupId>com.googlecode.aviator</groupId>
+      <artifactId>aviator</artifactId>
+      <version>3.1.0</version>
+    </dependency>-->
+    <dependency>
+      <groupId>commons-el</groupId>
+      <artifactId>commons-el</artifactId>
+      <version>1.0</version>
+    </dependency>
+
 
       <dependency>
       <groupId>org.apache.commons</groupId>
